[gd_scene load_steps=6 format=3 uid="uid://dcspgexcdsw3r"]

[ext_resource type="Script" path="res://Scripts/Inventory_Slot.gd" id="1_ascdd"]
[ext_resource type="Texture2D" uid="uid://cpsjaebpas6w4" path="res://assets/Icons/icon1.png" id="2_3bu3b"]
[ext_resource type="FontFile" uid="uid://bi04iecmbt37l" path="res://assets/Fonts/ARCADECLASSIC.TTF" id="3_etaqe"]
[ext_resource type="FontFile" uid="uid://do6g4q03tl1gj" path="res://assets/Fonts/Schr√∂dinger.ttf" id="4_5jeae"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2xctd"]

[node name="Inventory_Slot" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -992.0
offset_bottom = -488.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ascdd")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.471394, 0.762473, 0.644153, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
custom_minimum_size = Vector2(140, 140)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.231333, 0.432186, 0.252238, 1)

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(70, 70)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_3bu3b")

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_etaqe")
theme_override_font_sizes/font_size = 30
text = "1"
horizontal_alignment = 1

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_2xctd")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.231373, 0.431373, 0.25098, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 0
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_etaqe")
theme_override_font_sizes/font_size = 28
text = "Item Name"

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.470588, 0.760784, 0.643137, 1)
theme_override_fonts/font = ExtResource("3_etaqe")
theme_override_font_sizes/font_size = 24
text = "Item Type"

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -23.0
offset_right = 45.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_5jeae")
theme_override_font_sizes/font_size = 20
text = "Item effect here!"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -200.0
offset_right = 240.0
offset_bottom = -10.0
color = Color(0.470588, 0.760784, 0.643137, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -65.5
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="UseButton" type="Button" parent="UsagePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_etaqe")
theme_override_font_sizes/font_size = 32
text = "Use"

[node name="DropButton" type="Button" parent="UsagePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_etaqe")
theme_override_font_sizes/font_size = 32
text = "Drop"

[node name="AssignButton" type="Button" parent="UsagePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_etaqe")
theme_override_font_sizes/font_size = 32
text = "To Hotbar"

[node name="CraftButton" type="Button" parent="UsagePanel/VBoxContainer"]
layout_mode = 2
text = "Craft"

[connection signal="gui_input" from="ItemButton" to="." method="_on_item_button_gui_input"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="UsagePanel/VBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="UsagePanel/VBoxContainer/DropButton" to="." method="_on_drop_button_pressed"]
[connection signal="pressed" from="UsagePanel/VBoxContainer/AssignButton" to="." method="_on_assign_button_pressed"]
[connection signal="pressed" from="UsagePanel/VBoxContainer/CraftButton" to="." method="_on_craft_button_pressed"]
